# mola-lidar-segmentation

./: CMakeLists.txt  README.md  mola-module.yml
apps/: mola-app-lidar-segment-scan.cpp
docs/: module-mola-lidar-segmentation.rst
include/mola-lidar-segmentation/: FilterBase.h  FilterEdgesPlanes.h  FilterParameters.h  LidarFilterBase.h  PointCloudToVoxelGrid.h
src/: FilterBase.cpp  FilterEdgesPlanes.cpp  FilterParameters.cpp  LidarFilterBase.cpp  PointCloudToVoxelGrid.cpp  register.cpp
